refactor: Images upload as base64 encoded string
